--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
      <title>SimuBus. Simulate Buses in Traffic</title>
   </head>
   <body>
+    <p><a href="https://github.com/nickhodge/simubus">Source code</a></p>
      <p>Absolute Time (s): <strong data-bind="text: absoluteTime_S().toFixed(1)"></strong></p>
      <p>Vehicles in queue: <strong data-bind="text: vehicles_in_queue"></strong></p>
      <p>Vehicles Km/hr (avg): <strong data-bind="text: vehicles_average_Kmph().toFixed(1)"></strong></p>
