--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
      <p>Absolute Time (s): <strong data-bind="text: absoluteTime_S().toFixed(1)"></strong></p>
      <p>Vehicles in queue: <strong data-bind="text: vehicles_in_queue"></strong></p>
      <p>Vehicles Km/hr (avg): <strong data-bind="text: vehicles_average_Kmph().toFixed(1)"></strong></p>
+     <p>Vehicles finish/hr: <strong data-bind="text: vehicles_finish_pH().toFixed(1)"></strong></p>
      <p>Buses in queue: <strong data-bind="text: buses_in_queue"></strong></p>
     <p>B-Line Pause Time (s): <strong data-bind="text: bline_pause_time_S().toFixed(1)"></strong></p>
   </body>
